[package]
name = "advent"
version = "0.1.0"
authors = ["Me"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
regex = "1.4.2"
num-complex = "0.3.1"
cached = "0.22.0"
peg = "0.6.3"
strum = "0.20.0"
strum_macros = "0.20.1"